<resources>
    <string name="app_name">ProntoAid</string>
    <string name="login">Login</string>
    <string name="username">Email</string>
    <string name="Login">login</string>
    <string name="CreateAnAccount">Create an accout/SignUp</string>
    <string name="SignUp">SignUp</string>
    <string name="FirstName">Name</string>
    <string name="LastName">LastName</string>
    <string name="Email">Email</string>
    <string name="Address">Address</string>
    <string name="PhoneNumber">PhoneNumber</string>
    <string name="UserName">UserName</string>
    <string name="PassWord">Password</string>
    <string name="CPassWord">Confirm Password</string>
    <string name="Create">Create</string>
    <string name="minimum_password">minimum_password</string>
    <string name="auth_failed">auth_failed</string>
    <string name="Welcome">Welcome</string>
    <string name="Search">Search</string>
    <string name="Searchh">Search For A Service</string>
    <string name="SELECTDATE">SELECT DATE</string>
    <string name="SELECTTIME">SELECT TIME</string>
    <string name="ASAP">Hire Now</string>
    <string name="SCHEDULE">schedule for Later</string>
    <string name="forgot_password">forgot password?</string>
    <string name="reset_password">reset password</string>
    <string name="location">Location :</string>
    <string name="title_activity_scheduler">scheduler</string>
    <string name="title_activity_welcome">ProntoAid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Customer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="notification">Notifications</string>

    <string name="menu_home">Book</string>
    <string name="history">History</string>
    <string name="AboutProntoAid">About ProntoAid</string>
    <string name="logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
